--- a/9-10-2023/list.html
+++ b/9-10-2023/list.html
@@ -2,6 +2,7 @@
     <head>
         <title>list</title>
     </head>
+    <body>
     <p>order list</p>
     <ol start="3">
         <li>html</li>
@@ -32,9 +33,5 @@
         </ul>
         <li>html</li>
         <li>css</li>
-    </ul>
-
-
-    
-    </ul>
+ </body>
 </html>
